{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 35,
  "lineage": "1c8b8d05-3b93-e286-e58f-e35a0fd47928",
  "resources": [
    {
      "module": "module.uc1",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20180129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/zones/us-central1-b/disks/telus-dev-us-central1-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/telus-arena-study-lab-005c64/zones/us-central1-b/instances/telus-dev-us-central1-instance",
            "instance_id": "578747550686690401",
            "label_fingerprint": "bGQQ8F_o3-k=",
            "labels": {
              "webserver": "true"
            },
            "machine_type": "f1-micro",
            "metadata": {
              "startup-script": "        apt-get -y update\n        apt-get -y install nginx\n        export HOSTNAME=$(hostname | tr -d '\\n')\n        export PRIVATE_IP=$(curl -sf -H 'Metadata-Flavor:Google' http://metadata/computeMetadata/v1/instance/network-interfaces/0/ip | tr -d '\\n')\n        echo \"Welcome to $HOSTNAME - $PRIVATE_IP\" \u003e /usr/share/nginx/www/index.html\n        service nginx start\n"
            },
            "metadata_fingerprint": "pbV9QfJI0pE=",
            "name": "telus-dev-us-central1-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc",
                "network_ip": "10.26.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/regions/us-central1/subnetworks/telus-dev-us-central1-pub-net",
                "subnetwork_project": "telus-arena-study-lab-005c64"
              }
            ],
            "project": "telus-arena-study-lab-005c64",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/zones/us-central1-b/instances/telus-dev-us-central1-instance",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "module.uc1.google_compute_subnetwork.public_subnet",
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.uc1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-07T18:01:39.168-08:00",
            "gateway_address": "10.26.1.1",
            "id": "projects/telus-arena-study-lab-005c64/regions/us-central1/subnetworks/telus-dev-us-central1-pri-net",
            "ip_cidr_range": "10.26.1.0/24",
            "name": "telus-dev-us-central1-pri-net",
            "network": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "telus-arena-study-lab-005c64",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/regions/us-central1/subnetworks/telus-dev-us-central1-pri-net",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.uc1",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-07T18:01:38.438-08:00",
            "gateway_address": "10.26.2.1",
            "id": "projects/telus-arena-study-lab-005c64/regions/us-central1/subnetworks/telus-dev-us-central1-pub-net",
            "ip_cidr_range": "10.26.2.0/24",
            "name": "telus-dev-us-central1-pub-net",
            "network": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "telus-arena-study-lab-005c64",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/regions/us-central1/subnetworks/telus-dev-us-central1-pub-net",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-07T17:12:46.292-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/telus-arena-study-lab-005c64/global/firewalls/telus-fw-allow-bastion",
            "log_config": [],
            "name": "telus-fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc",
            "priority": 1000,
            "project": "telus-arena-study-lab-005c64",
            "self_link": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/firewalls/telus-fw-allow-bastion",
            "source_ranges": [
              "10.26.2.0/24",
              "10.26.4.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-07T17:12:45.810-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/telus-arena-study-lab-005c64/global/firewalls/telus-fw-allow-http",
            "log_config": [],
            "name": "telus-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc",
            "priority": 1000,
            "project": "telus-arena-study-lab-005c64",
            "self_link": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/firewalls/telus-fw-allow-http",
            "source_ranges": [
              "10.26.2.0/24",
              "10.26.4.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ingress-from-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-08T10:39:42.703-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/telus-arena-study-lab-005c64/global/firewalls/telus-fw-allow-iap",
            "log_config": [],
            "name": "telus-fw-allow-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc",
            "priority": 1000,
            "project": "telus-arena-study-lab-005c64",
            "self_link": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/firewalls/telus-fw-allow-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-02-07T17:12:46.630-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/telus-arena-study-lab-005c64/global/firewalls/telus-fw-allow-internal",
            "log_config": [],
            "name": "telus-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc",
            "priority": 1000,
            "project": "telus-arena-study-lab-005c64",
            "self_link": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/firewalls/telus-fw-allow-internal",
            "source_ranges": [
              "10.26.1.0/24",
              "10.26.2.0/24",
              "10.26.3.0/24",
              "10.26.4.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc",
            "mtu": 0,
            "name": "telus-dev-vpc",
            "project": "telus-arena-study-lab-005c64",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/telus-arena-study-lab-005c64/global/networks/telus-dev-vpc"
          }
        }
      ]
    }
  ]
}